--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "name": "kaffet-quote-app",
     "version": "1.0.6",
-    "author": "Kasimir Kuusela <kasimir.kuusela@kuasi.fi>"
-  }
+    "author": "Kasimir Kuusela <kasimir.kuusela@kuasi.fi>",
+    "dependencies": {
+        "airtable": "^0.12.1"
+    }
+}
